deployment/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: front
