deployment/pg_service_exemple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-deployment
spec:
  selector:
    matchLabels:
      app: pg
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: pg
    spec:
      containers:
      - name: pg
        image: postgres
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-volume
          subPath: db
      volumes:
      - name: db-volume
        persistentVolumeClaim:
          claimName: pg-data
---
apiVersion: v1
kind: Service
metadata:
  name: pg-service
spec:
  type: LoadBalancer
  loadBalancerIP: 34.171.94.83
  ports:
  - name: pg-network
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: pg
